# auto-exam

./: .gitignore  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/nlohmann_json/: CMakeLists.txt
src/: CMakeLists.txt  Info.plist  main.cpp
src/models/: AnswerPaper.cpp  AnswerPaper.h  BaseProblem.cpp  BaseProblem.h  Paper.cpp  Paper.h
src/models/problems/: MultipleChoiceProblem.cpp  MultipleChoiceProblem.h  ShortAnswerProblem.cpp  ShortAnswerProblem.h  SingleChoiceProblem.cpp  SingleChoiceProblem.h  TrueOrFalseProblem.cpp  TrueOrFalseProblem.h
src/ui/widgets/: AlignedInfoLayout.cpp  AlignedInfoLayout.h  NavigatorWidget.cpp  NavigatorWidget.h  ProblemEditor.cpp  ProblemEditor.h  ProblemIndicatorLayout.cpp  ProblemIndicatorLayout.h  ProblemIndicatorWidget.cpp  ProblemIndicatorWidget.h  ProblemLabel.cpp  ProblemLabel.h  ProblemViewer.cpp  ProblemViewer.h  RemovableLabel.cpp  RemovableLabel.h  RemovableLineEdit.cpp  RemovableLineEdit.h  ScoreViewer.cpp  ScoreViewer.h
src/ui/widgets/infoLayout/: EditInfoLayout.cpp  EditInfoLayout.h  ExamInfoLayout.cpp  ExamInfoLayout.h
src/ui/widgets/problemEditor/: BaseProblemEditor.cpp  BaseProblemEditor.h  MultipleChoiceProblemEditor.cpp  MultipleChoiceProblemEditor.h  ShortAnswerProblemEditor.cpp  ShortAnswerProblemEditor.h  SingleChoiceProblemEditor.cpp  SingleChoiceProblemEditor.h  TrueOrFalseProblemEditor.cpp  TrueOrFalseProblemEditor.h
src/ui/window/: EditWindow.cpp  EditWindow.h  EntryWidget.cpp  EntryWidget.h  ExamWindow.cpp  ExamWindow.h  SetupWindow.cpp  SetupWindow.h
(+10 files in other folders)
